# TFG_ZigBee_Embedded_Controller

./: BUILD.md  LICENSE.txt  README.md  image.assertion  run-mir  snapcraft.yaml  xbee-pandaboard-adapter.kicad_pcb  xbee-pandaboard-adapter.net  xbee-pandaboard-adapter.pro  xbee-pandaboard-adapter.sch  xbee-pandaboard-adapter.xml
Python/: Conexiones.py  ConsultaAPI.py  DialogaAPI.py  GestionaCaja.py  WebCaja.py
configs/: nodered_flows.json  xbee2mqtt.yaml
domoticz/hardware/: Dummy.cpp  Dummy.h  MQTT.cpp  MQTT.h
domoticz/main/: WebServer.cpp  mainworker.cpp
domoticz/www/app/: HardwareController.js  UtilityController.js
domoticz/www/views/: devices.html
hardware/: Dummy.cpp  MQTT.cpp  MQTT.h
linux-panda-snap/: README.md  snapcraft.yaml
main/: WebServer.cpp  WebServer.h
mir-server-snap/: run-mir
mir-server-snap/src/: mir_server_basic_window_manager.h  mir_server_fullscreen_wm.h  mir_server_window_management_info.h
snapcraft/snapcraft/internal/: sources.py
src/: CMakeLists.txt  mir_server.cpp  mir_server_basic_window_manager.cpp  mir_server_fullscreen_wm.cpp  mir_server_window_management_info.cpp  mir_server_window_management_info.h
www/app/: DevicesController.js  HardwareController.js
www/views/: devices.html  hardware.html
xbee-pandaboard-adapter/: .gitignore  xbee-pandaboard-adapter-cache.lib  xbee-pandaboard-adapter.kicad_pcb
xbee_profiles/: profile_COOR2.xml  profile_NODO02.xml
